--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(untitled2 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(untitled2  Qa02_1.c QA03.c QA03_1.c)
+add_executable(untitled2   QA03_1.c)
