--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ cmake-build-debug/CMakeFiles/untitled2.dir/Structures5.c.obj
 cmake-build-debug/CMakeFiles/untitled2.dir/Structures7.c.obj
 cmake-build-debug/CMakeFiles/untitled2.dir/Structures8.c.obj
 cmake-build-debug/CMakeFiles/untitled2.dir/Structures9.c.obj
+cmake-build-debug/CMakeFiles/Progress/1
