--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(untitled2 C)
 set(CMAKE_C_STANDARD 99)
 
 # add_executable(untitled2 file.c ) // write the file name end with .c
-add_executable(untitled2  Bitwise_Operator.c)
+add_executable(untitled2  C5_Loop_Control_Instruction_Q_B_f.c)
